Update for latest changes in JDK 20